feat: add character designer with photo-to-sketch and description-to-sketch
- New character_designer.py: CharacterDesigner with 5 sketch styles
  (stick_figure, cartoon, manga, doodle, whiteboard)
- Photo-to-sketch: edge detection + ControlNet SDXL (with img2img fallback)
- Description-to-sketch: SDXL with style-specific prompts
- schemas.py: CharacterDef model, characters_in_scene/actions/emotions in Scene
- script_parser.py: LLM now places characters into scenes with actions/emotions
- image_generator.py: injects character descriptions and sketch style into prompts
- pipeline.py: new character_design stage between parsing and TTS
- main.py: --characters (JSON file/inline) and --character-style CLI options
- config.yaml: characters section with style, ControlNet and edge detection settings
- requirements.txt: added opencv-python for Canny edge detection

--- a/config.yaml
+++ b/config.yaml
@@ -69,6 +69,18 @@ subtitles:
   position: "bottom"                  # "bottom", "center", "top"
   max_words_per_line: 5
 
+# --- Character Designer ---
+characters:
+  default_style: "stick_figure"       # stick_figure, cartoon, manga, doodle, whiteboard
+  controlnet_model: "diffusers/controlnet-canny-sdxl-1.0"
+  # Edge detection settings (for photo → sketch)
+  canny_low_threshold: 50
+  canny_high_threshold: 150
+  # Generation settings
+  num_inference_steps: 30
+  guidance_scale: 7.5
+  controlnet_conditioning_scale: 0.8
+
 # --- Output Settings ---
 output:
   directory: "output"
@@ -99,6 +111,7 @@ pipeline:
   # Which stages to run (useful for debugging / partial runs)
   stages:
     - script_parse
+    - character_design
     - tts
     - image_gen
     - video_gen
