feat: add futuristic React frontend with FastAPI backend
Frontend (React + Vite + Tailwind):
- Futuristic dark theme with neon cyan/purple accents
- Glass-morphism cards with gradient borders
- Script input with character counter
- Platform selector (YouTube/Reels/Shorts)
- Quality tiers (Standard/High/Ultra)
- Scene count slider, voice selector
- Music & subtitles toggles
- Character designer panel with art style picker
- Animated progress screen with real-time SSE updates
- Video player with download button
- Fully responsive design

Backend (FastAPI):
- POST /api/generate - start pipeline with form data
- GET /api/progress/{job_id} - SSE progress stream
- GET /api/video/{job_id} - serve final video
- GET /api/health - GPU status check
- CORS configured for dev server
- Serves built frontend in production

Pipeline:
- Added progress_callback parameter to pipeline.run()
- Reports stage status (running/completed) via callback
- Backend API wires callback to SSE job store

--- a/requirements.txt
+++ b/requirements.txt
@@ -35,3 +35,8 @@ pydantic>=2.0.0
 # Utilities
 tqdm>=4.65.0
 opencv-python>=4.8.0
+
+# Backend API (for React frontend)
+fastapi>=0.115.0
+uvicorn[standard]>=0.30.0
+python-multipart>=0.0.9
