fix: switch LLM to mistral + add pipeline logging
- Switch from glm-4.7-flash (29.9B, needs 37GB RAM) to mistral (7.2B)
- Add structured logging (contentcreator logger) to pipeline worker thread
- Enable stdout line-buffering in worker thread for Rich console output
- Log stage transitions, pipeline start/completion/failure with job IDs

--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@
 # --- LLM (Script Parsing & Scene Planning) ---
 llm:
   provider: "ollama"
-  model: "glm-4.7-flash:latest"      # or "llama3", "mistral"
+  model: "mistral:latest"              # 7.2B params, fits in RAM easily
   base_url: "http://localhost:11434"
   temperature: 0.7
   max_tokens: 4096
