feat: storytelling narration + expressive voice tones\n\nNarration quality:\n- Rewrote SYSTEM_PROMPT to instruct LLM as a master storyteller\n- Narration now flows as one continuous story, not bullet points\n- Uses transitional phrases, sensory language, emotional arcs\n- Added narration_tone field to Scene schema (17 tones: excited,\n  dramatic, calm, sad, hopeful, mysterious, epic, etc.)\n- LLM varies tone per scene to create an emotional journey\n\nExpressive TTS:\n- Monkey-patched edge-tts mkssml to inject <mstts:express-as> SSML\n  tags for emotional style control per scene\n- Each narration_tone maps to an express-as style + dynamic prosody\n  (rate + pitch adjustments) — e.g. sad = slower + lower pitch\n- Graceful fallback: express-as style → fallback style → prosody-only\n- Default voice changed to en-US-AriaNeural (30+ emotional styles)\n\nFiles changed:\n- schemas.py: narration_tone field + _normalize_tone validator\n- script_parser.py: storytelling system prompt + narration_tone in JSON\n- tts_engine.py: full rewrite with SSML express-as + tone mapping\n- config.yaml: AriaNeural default + expressive voice guide\n\nValidated with 5-scene fire discovery story (6m 17s, all stages clean)."

--- a/config.yaml
+++ b/config.yaml
@@ -17,10 +17,17 @@ llm:
 tts:
   engine: "edge"                      # "edge" (Microsoft Edge TTS, free, high quality)
   language: "en"
-  voice: "en-US-GuyNeural"            # See available voices: python -c "import asyncio; from src.tts_engine import TTSEngine; print(asyncio.run(TTSEngine.list_voices()))"
-  rate: "+0%"                         # Speed: "-50%" to "+100%"
+  # Expressive voices with emotional style support (best → good):
+  #   en-US-AriaNeural    — Female, 30+ styles, BEST for storytelling
+  #   en-US-JennyNeural   — Female, warm & professional
+  #   en-US-DavisNeural   — Male, conversational storyteller
+  #   en-US-GuyNeural     — Male, authoritative narrator
+  #   en-US-JasonNeural   — Male, natural & expressive
+  #   en-US-SaraNeural    — Female, friendly narrator
+  voice: "en-US-AriaNeural"           # Most expressive voice — supports excited, sad, dramatic, whispering, etc.
+  rate: "+0%"                         # Base speed (overridden per scene by narration_tone)
   volume: "+0%"                       # Volume adjustment
-  pitch: "+0Hz"                       # Pitch adjustment
+  pitch: "+0Hz"                       # Base pitch (overridden per scene by narration_tone)
 
 # --- Image Generation ---
 image:
